gcc/testsuite/g++.old-deja/g++.jason/rfg11.C
// { dg-do assemble  }
typedef int int;	/* { dg-error "" } trying to redefine int */
